[workspace]
members = [
    "packages/cli",
    "packages/key-server",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.39"
tokio = { version = "1.49.0", features = ["full"] }
ratatui = "=0.26.1"
zip = "=0.6.6"
indicatif = "=0.18.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
